--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 fraction = "0.15.0"
+
+[profile.release]
+opt-level = 3
+lto = true
+panic = "abort"
+strip = true
